chore: add new packages and extend csp
Added:
- axios
- date-fns
- @storyblok/richtext

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,11 @@
 # Copy this file as .env.local
 STORYBLOK_API_KEY=
 STORYBLOK_PREVIEW_SECRET=
+
+# strava
+STRAVA_CLIENT_ID=
+STRAVA_CLIENT_SECRET=
+STRAVA_REFRESH_TOKEN=
+
+# next
+NEXT_PUBLIC_API_URL=http://localhost:3000
