--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@storyblok/react": "^4.0.0",
+    "@storyblok/richtext": "^3.0.2",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "^13.5.4",
