--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postbuild": "next-sitemap",
     "storyblok:types": "bash .script/storyblok.sh"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "^13.5.4",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
