--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -87,7 +87,9 @@ jobs:
           STRAVA_REFRESH_TOKEN: ${{ secrets.STRAVA_REFRESH_TOKEN }}
           BASE_PATH: ${{ secrets.BASE_PATH }}
       - name: Static HTML export with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next export
+        run: ${{ steps.detect-package-manager.outputs.runner }} next export -o out
+      - name: Generate sitemaps
+        run: ${{ steps.detect-package-manager.outputs.runner }} next-sitemap
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
