chore: extend pipeline sitemap step config

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -90,6 +90,8 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} next export -o out
       - name: Generate sitemaps
         run: ${{ steps.detect-package-manager.outputs.runner }} next-sitemap
+        env:
+          BASE_PATH: ${{ secrets.BASE_PATH }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
