--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Generate sitemaps
         run: ${{ steps.detect-package-manager.outputs.runner }} next-sitemap
         env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+          BASE_PATH: ${{ secrets.BASE_PATH }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
