--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -49,7 +49,7 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('pnpm-lock.yaml') }}-
 
       - name: Build Next.js site
-        run: pnpm --filter site next build --turbopack
+        run: npx pnpm --filter site next build --turbopack
         env:
           STORYBLOK_API_KEY: ${{ secrets.STORYBLOK_API_KEY }}
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
@@ -59,7 +59,7 @@ jobs:
           BASE_PATH: ${{ secrets.BASE_PATH }}
 
       - name: Generate sitemaps
-        run: pnpm --filter site next-sitemap
+        run: npx pnpm --filter site next-sitemap
         env:
           BASE_PATH: ${{ secrets.BASE_PATH }}
 
