chore: change gituhub actions

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -20,36 +20,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: 'pnpm'
 
-      - name: Setup pnpm and install dependencies
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: true
+      - name: Install pnpm globally
+        run: npm install -g pnpm@9
 
-      - name: Configure Pages for Next.js
-        uses: actions/configure-pages@v4
-        with:
-          static_site_generator: next
-
-      - name: Restore Next.js cache
-        uses: actions/cache@v4
-        with:
-          path: .next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('pnpm-lock.yaml') }}-
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: Build Next.js site
-        run: npx pnpm --filter site next build --turbopack
+        run: pnpm --filter site next build --turbopack
         env:
           STORYBLOK_API_KEY: ${{ secrets.STORYBLOK_API_KEY }}
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
@@ -59,14 +43,9 @@ jobs:
           BASE_PATH: ${{ secrets.BASE_PATH }}
 
       - name: Generate sitemaps
-        run: npx pnpm --filter site next-sitemap
+        run: pnpm --filter site next-sitemap
         env:
           BASE_PATH: ${{ secrets.BASE_PATH }}
-
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./out
 
   deploy:
     environment:
