chore: fix gh actions build pipeline

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -20,19 +20,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Node.js
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 10
+          run_install: false
+
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: 20
           cache: 'pnpm'
 
-      - name: Install pnpm globally
-        run: npm install -g pnpm@9
-
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
-      - name: Build Next.js site
+      - name: Build website
         run: pnpm --filter site next build --turbopack
         env:
           STORYBLOK_API_KEY: ${{ secrets.STORYBLOK_API_KEY }}
